# shell-script-manager

./: .gitignore  README.md  bootstrap.sh  build.sh  install.sh  installer.sh  shurl  ursh
cli/: go.mod
cli/cmd/ursh/: main.go  policy_test.go  tui.go  (+1 more)
examples/: args.sh  chroot-test.sh  colors.sh  docker-test.sh  guard-test.sh  hello.sh  isolation-test.sh  ursh-permissions.yml
examples/audited/: cleanup.sh  deploy.sh  ursh-permissions.yml
examples/policy-test/: password-manager-tilde.sh  password-manager.sh  password-manager.urshi.yaml  passwords.txt  snake-game.sh  snake-game.urshi.yaml
go/: go.mod
next/: README.md
next/urshin/: README.md
next/website/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  start.sh
plugins/audit/: main  metadata.yml
site/: README.md
spec/: README.md  URSHI-MANIFEST-SPEC.md  URSHI-POLICY-SPEC.md  urshi-manifest.schema.json  urshi-manifest.schema.yaml
spec/examples/: example-01-hello-world.urshi.yaml  example-02-docker-setup.urshi.yaml  example-03-healthcare-backup.urshi.yaml  example-04-ai-codegen.urshi.yaml  example-05-minimal-privileges.urshi.yaml
tests/: test_audit.sh  test_cache.bats  test_edge_cases.bats  test_features.bats  test_flags.bats  test_flags.sh  test_github_shorthand.bats  test_guards.bats  test_helpers.sh  test_install.bats  test_install_list.bats  test_local_files.bats
urchin/: POLICY_MANIFEST_SCHEMA.md  urchin.py
urchin/urshin/: __main__.py  cli.py  formatters.py  harness.py  harness_clean.py
urshin/: pyproject.toml
urshin/urshin/: cli.py  harness.py
(+39 files in other folders)
